--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 alembic==1.14.1
 blinker==1.9.0
 click==8.1.8
+coverage==7.8.0
 Flask==3.1.0
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
+gunicorn==23.0.0
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
@@ -13,6 +15,7 @@ packaging==24.2
 pluggy==1.5.0
 psycopg2-binary==2.9.10
 pytest==8.3.4
+pytest-cov==6.1.1
 python-dotenv==1.0.1
 SQLAlchemy==2.0.38
 typing_extensions==4.12.2
